--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    google()
+    mavenCentral()
 }
 
 dependencies {
